...
            <View
                android:id="@+id/nav_indicator"
                android:layout_width="0dp"
                android:layout_height="@dimen/home_ref_nav_indicator_height"
                android:background="@drawable/bg_nav_pill"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/hostNavHome"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="@id/hostNavHome"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
...
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/nav_tab_home"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/hostNavExplore"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/hostNavHomeIcon"
...
            </LinearLayout>

            <View
                android:id="@+id/hostNavVoiceSpace"
                android:layout_width="76dp"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toStartOf="@id/hostNavCart"
                app:layout_constraintStart_toEndOf="@id/hostNavExplore"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/hostNavCart"
                android:layout_width="0dp"
...
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/nav_tab_cart"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/hostNavProfile"
                app:layout_constraintStart_toEndOf="@id/hostNavVoiceSpace"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:layout_width="36dp"
                    android:layout_height="30dp"
...
