...
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="@dimen/profile_nav_item_padding_top"
        android:paddingBottom="@dimen/profile_nav_item_padding_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/navCart"
        app:layout_constraintStart_toEndOf="@id/navHome"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/profile_bottom_nav_icon_size"
            android:layout_height="@dimen/profile_bottom_nav_icon_size"
...
                app:cardBackgroundColor="@color/panier_notification_dot"
                app:cardCornerRadius="@dimen/corner_radius_round"
                app:cardElevation="@dimen/space_0"
                app:strokeWidth="@dimen/space_0">

                <TextView
                    android:id="@+id/tvBottomCartBadge"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:textColor="@color/colorOnError"
                    android:textSize="9sp"
...
