...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4">

            <TextView
                android:id="@+id/tvCartCountChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_home_meta_pill"
                android:fontFamily="@font/manrope_semibold"
                android:paddingStart="@dimen/space_10"
                android:paddingTop="@dimen/space_4"
...
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnCheckout"
                        style="@style/Ms.Button.Primary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="52dp"
                        android:layout_marginTop="@dimen/space_20"
                        android:text="@string/cart_checkout_action"
...
