...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardLanguageOptions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_horizontal_margin"
        android:layout_marginTop="@dimen/profile_menu_top_padding"
        android:layout_marginEnd="@dimen/profile_horizontal_margin"
        app:cardBackgroundColor="@color/ms_surface_card"
...
                    style="@style/LanguageButton.Base"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/profile_language_option_height"
                    android:text="@string/language_option_french" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEnglish"
                    style="@style/LanguageButton.Base"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/profile_language_option_height"
                    android:layout_marginTop="@dimen/space_12"
                    android:text="@string/language_option_english" />
            </LinearLayout>
...
