...
                android:layout_height="wrap_content"
                android:text="@string/orders_history_filter_cancelled" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <FrameLayout
        android:id="@+id/scrollOrders"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingStart="@dimen/space_16"
        android:paddingTop="@dimen/space_8"
        android:paddingEnd="@dimen/space_16"
...
